--- a/java/类加载.md
+++ b/java/类加载.md
@@ -13,22 +13,30 @@
 
 3. ### 类加载过程:
    加载和连接阶段是交叉进行的
-   1. 加载: 过程大致如下
-       1. 通过一个类的全限定名获取此类的二进制流(可从网络, 压缩文件等地方加载)
-       2. 将这个类的静态存储结果转换为方法区的运行时数据结构
-       3. 在内存生成此类的Class类实例, 作为访问入口
+
+   **加载**: 过程大致如下
+
+   1. 通过一个类的全限定名获取此类的二进制流(可从网络, 压缩文件等地方加载)
+   2. 将这个类的静态存储结果转换为方法区的运行时数据结构
+   3. 在内存生成此类的Class类实例, 作为访问入口
    **注意: 数组类不通过类加载器加载, 它由虚拟机直接创建, 但其元素类型还是要加载**
 
-   连接阶段:
+   **连接**阶段:
+
    2. 验证: 这一阶段确保Class文件字节流不会危害虚拟机自身的安全
             包括: 
-                1. 文件格式验证: 魔数, 常量池类型等
-                2. 元数据验证: 对字节码进行语义分析, 如这个类是否有父类(类都要继承Object类)
-                3. 字节码验证: 确保语义是合法, 符合逻辑的, 保证方法在运行时不会出现危害虚拟机安全的事件
-                4. 符号引用验证: 发生在虚拟机将符号引用转化为直接引用时, 如查看引用的类是否存在
+
+        - 文件格式验证: 魔数, 常量池类型等
+
+        - 数据验证: 对字节码进行语义分析, 如这个类是否有父类(类都要继承Object类)
+
+        - 字节码验证: 确保语义是合法, 符合逻辑的, 保证方法在运行时不会出现危害虚拟机安全的事件
+        - 符号引用验证: 发生在虚拟机将符号引用转化为直接引用时, 如查看引用的类是否存在
    3. 准备: 此阶段正式为类的变量(只有static变量, 不包括实例变量)分配内存并初始化为零值,
    4. 解析: 此阶段将常量池里面的符号引用(一组符号, 用于定位目标)替换为直接引用(实例变量的指针等, 与内存布局相关)
+         
              1. 类或者接口解析: 若类未加载, 则需要用其全限定名去加载
+         
           2. 字段解析: 按照继承关系查找某个域的定义
           3. 类方法解析: 先解析出类方法表, 再按照继承关系查找方法
           4. 接口方法解析: 与类方法类似, 按照继承关系, 查找与接口匹配的方法
@@ -36,9 +44,9 @@
        <clinit>() 方法自动由编译器收集类中的赋值动作和静态语句块(static{}, 只能访问这个块之前定义的变量)
        同时, <clinit>() 会先递归调用父类的<clinit>() 方法
 
-4.### 类加载器:
-    **每个类和它的加载器一同确立其在虚拟机中的唯一性, 即两者是一个整体, 同一个类不同加载器是不同的(equals, instanceof 等方法)**
-special、invokevirtual等，至于静态属性和静态方法，对应的指令为getstatic、putstatic、invokestatic。
+4.  ### 类加载器:
+   ​    **每个类和它的加载器一同确立其在虚拟机中的唯一性, 即两者是一个整体, 同一个类不同加载器是不同的(equals, instanceof 等方法)**
+   special、invokevirtual等，至于静态属性和静态方法，对应的指令为getstatic、putstatic、invokestatic。
 
 5.  ## 双亲委派模型:
   1. 两种不同类加载器:
@@ -46,10 +54,10 @@ special、invokevirtual等，至于静态属性和静态方法，对应的指令
                                             委托给启动类加载器, 用null代替 即可
      - 扩展类加载器(Extension ClassLoader): 这个加载器由sun.misc.Launcher $ExtClassLoader实现, 它负责加载<JAVA_HOME>\lib\ext 中类
      - 应用程序加载器(Application ClassLoader): 开发者可以用这个加载器, 是用户类的默认加载器, 由sun.misc.Launcher $App-ClassLoader实现,
-                                            这个记载器是getSystemClassLoader() 方法的返回值, 系统类加载器, 负责加载用户类路径(ClassPath)中的类
+                                            这个加载器是getSystemClassLoader() 方法的返回值, 系统类加载器, 负责加载用户类路径(ClassPath)中的类
 
   2. 类加载器双亲委派模型:
-      ** 启动类加载器 <- 扩展类加载其 <- 应用程序加载器 <-  自定义类加载器(多个加载器) **
+      **启动类加载器 <- 扩展类加载其 <- 应用程序加载器 <-  自定义类加载器(多个加载器) **
       此模型要求除了顶层的启动类加载器外, 其余的类加载器都应当要有自己的父类加载器, 这里的父子关系用的组合, 而不是继承.
       过程: 如果一个类加载器收到类加载的请求, 它自己不会先去加载这个类, 而是把这个类委托给它父加载器去加载, 最终所有请求都应该传送到
          顶层的启动类加载器, 只有当父类无法自己完成这个请求, 才会自己尝试去加载
