--- a/os/# 进程与线程.md
+++ b/os/# 进程与线程.md
@@ -25,7 +25,7 @@
 2. 切换内容:
    1. **用户级上下文:** 正文、数据、用户堆栈以及共享存储区(切换页目录以使用新的地址空间)
    2. **寄存器上下文:** 通用寄存器、程序寄存器(IP)、处理器状态寄存器(EFLAGS)、栈指针(ESP)
-   3. **系统级上下文:** 进程控制块task_struct、内存管理信息(mm_struct、vm_area_struct、pgd、pte)、内核栈
+   3. **系统级上下文:** 进程控制块task_struct、内存管理信息(mm_struct、pgd、pte)、内核栈
 3. 上下文切换时，被调用进程成为当前进程。**在进程切换时系统要把当前进程的上下文保存在指定的内存区域（该进程的任务状态段TSS中），然后把下一个使用处理器运行的进程的上下文设置成当前进程的上下文。当一个进程经过调度再次使用CPU运行时，系统要恢复该进程保存的上下文。所以，进程的切换也就是上下文切换。**在系统内核为用户进程服务时，通常是**进程通过系统调用执行内核代码**，这时进程的执行状态由用户态转换为内核态。
 
 ### 3. 区别: 
@@ -46,7 +46,7 @@
 1. 线程是存在进程的内部，一个进程中可以有多个线程，一个线程只能存在一个进程中；
 2. 一个线程的结束进程不一定会退出，但是进程的退出，线程将退出；
 3. 一个进程中的多个线程共享：
-   - 一个进程中线程与线程之间共虚拟地址空间；
+   - 一个进程中线程与线s程之间共虚拟地址空间；
 
    - 共享文件描述符
 
@@ -59,7 +59,7 @@
    - 进程资源，防止造成僵尸进程。而线程也要进行等待，释放线程的资源（除过线程的分离）。
 
 ### 5. 线程分类: 
-1. 用户级线程: 在用户级线程软件中，线程的管理有应用程序完成，内核意识不到线程的存在。所有的线程都在进程的用户空间中，线程切换不需要内核态特权，线程的调度也有应用程序负责。当一个进程中的线程运行时产生阻塞操作，那么这个时候内核就会启动阻塞操作并把当前进程的状态置为阻塞态。
+1. 用户级线程: 在用户级线程软件中，线程的管理有应用程序完成，内核意识不到线程的存在。所有的线程都在进程的用户空间中，线程切换不需要内核态特权，线程的调度也有应用程序负责。当一个进程中的线程运行时产生阻塞操作，那么这个时候内核就会启动阻塞操作并``把当前进程的状态置为阻塞态。
 2. 内核级线程: 运行在内核级软件中，有关线程的管理在内核中完成，内核为进程及其内部的线程维护上下文信息，应用程序部分没有进行线程管理的代码。
 3. 用户级线程和内核级线程的优缺点：
 + 用户级线程切换不需要内核切换状态，内核级线程切换需要内核切换状态。
@@ -85,39 +85,8 @@
     
     
 
-### 7. Java线程池
 
-![](/home/halo/notes/java线程池.jpg)
 
-1. 线程池的作用: 
-	1. 降低资源消耗。线程是操作系统十分宝贵的资源，当多个人同时开发一个项目时，在互不知情的情况下，都自己在代码中创建了线程，这样就会导致线程数过多，而且线程的创建和销毁，在操作系统层面，需要由用户态切换到内核态，这是一个费时费力的过程。而使用线程池可以避免频繁的创建线程和销毁线程，线程池中线程可以重复使用。
-	2. 提高响应速度。当请求到达时，由于线程池中的线程已经创建好了，使用线程池，可以省去线程创建的这段时间。
-	3. 提高线程的可管理性。线程是稀缺资源，当创建过多的线程时，会造成系统性能的下降，而使用线程池，可以对线程进行统一分配、调优和监控。
-2. 实现原理:
-	
-	1. 先判断线程池中线程的数量是否超过核心线程数，如果没有超过核心线程数，就创建新的线程去执行任务；如果超过了核心线程数，就进入到下面流程。
-	2. 判断任务队列是否已经满了，如果没有满，就将任务添加到任务队列中；如果已经满了，就进入到下面的流程。
-	3. 再判断如果创建一个线程后，线程数是否会超过最大线程数，如果不会超过最大线程数，就创建一个新的线程来执行任务；如果会，则进入到下面的流程。
-	4. 执行拒绝策略。
-
-3. 创建原理
-```java
-public ThreadPoolExecutor(int corePoolSize,
-                      int maximumPoolSize,
-                      long keepAliveTime,
-                      TimeUnit unit,
-                      BlockingQueue<Runnable> workQueue,
-                      ThreadFactory threadFactory,
-                      RejectedExecutionHandler handler) {
-}
-```
-- corePoolSize：该参数表示的是线程池的核心线程数。当任务提交到线程池时，如果线程池的线程数量还没有达到corePoolSize，那么就会新创建的一个线程来执行任务，如果达到了，就将任务添加到任务队列中。
-- maximumPoolSize：该参数表示的是线程池中允许存在的最大线程数量。当任务队列满了以后，再有新的任务进入到线程池时，会判断再新建一个线程是否会超过maximumPoolSize，如果会超过，则不创建线程，而是执行拒绝策略。如果不会超过maximumPoolSize，则会创建新的线程来执行任务。
-- keepAliveTime：当线程池中的线程数量大于corePoolSize时，那么大于corePoolSize这部分的线程，如果没有任务去处理，那么就表示它们是空闲的，这个时候是不允许它们一直存在的，而是允许它们最多空闲一段时间，这段时间就是keepAliveTime，时间的单位就是TimeUnit。
-- unit：空闲线程允许存活时间的单位，TimeUnit是一个枚举值，它可以是纳秒、微妙、毫秒、秒、分、小时、天。
-- workQueue：任务队列，用来存放任务。该队列的类型是阻塞队列，常用的阻塞队列有ArrayBlockingQueue、LinkedBlockingQueue、SynchronousQueue、PriorityBlockingQueue等。 ArrayBlockingQueue是一个基于数组实现的阻塞队列，元素按照先进先出（FIFO）的顺序入队、出队。** 需要指定大小**
-- threadFactory：线程池工厂，用来创建线程。通常在实际项目中，为了便于后期排查问题，在创建线程时需要为线程赋予一定的名称，通过线程池工厂，可以方便的为每一个创建的线程设置具有业务含义的名称。
-handler：拒绝策略。当任务队列已满，线程数量达到maximumPoolSize后，线程池就不会再接收新的任务了，这个时候就需要使用拒绝策略来决定最终是怎么处理这个任务。默认情况下使用AbortPolicy，表示无法处理新任务，直接抛出异常。在ThreadPoolExecutor类中定义了四个内部类，分别表示四种拒绝策略。我们也可以通过实现RejectExecutionHandler接口来实现自定义的拒绝策略。AbortPocily：不再接收新任务，直接抛出异常。 CallerRunsPolicy：提交任务的线程自己处理。 DiscardPolicy：不处理，直接丢弃。 DiscardOldestPolicy：丢弃任务队列中排在最前面的任务，并执行当前任务。（排在队列最前面的任务并不一定是在队列中待的时间最长的任务，因为有可能是按照优先级排序的队列）
 
 ## 8. linux进程&线程
 
@@ -137,7 +106,7 @@ handler：拒绝策略。当任务队列已满，线程数量达到maximumPoolSi
     如果此 task 是一个线程, 为了不影响其他线程(mm_strcut中的stack), 父进程会在堆或者mmap内找一个空间作为线程的stack
     因此: 建立一个线程或者进程会产生两个stack:
     
-    + 用户stack: 在thread结构中的stack, 是用户地址空间的一部分(mm_s tack中的一部分或者heap/mmap) 
+    + 用户stack: 在thread结构中的stack, 是用户地址空间的一部分(mm_stack中的一部分或者heap/mmap) 
     + 内核stack: 在task_struct中的stack
     
     
