--- a/二叉树.md
+++ b/二叉树.md
@@ -21,7 +21,7 @@
    2. 优点: 搜索, 插入, 删除的复杂度都是O(log n)
    3. 缺点: 
       1. 严格平衡树, 几乎每次插入删除都要进行旋转操作(需要查找不平衡元素, 并进行多次rebalance), 浪费时间
-      2. 每次删除需要将节点旋转成叶子节点再删除, 以保证整个高度路径上平衡性, 最多选择log n 个,消耗时间O(log n)
+      2. 每次删除需要将节点旋转成叶子节点再删除, 以保证整个高度路径上平衡性, 最多选择log n 个,消耗x时间O(log n)
       3. 插入只需要旋转最多2次
    4. 场景: 搜索较多, 删除插入较少的情况
 
@@ -57,7 +57,7 @@
    1. 特点:
       1. B树的进一步优化
       2. 只有叶子节点携带数据,
-      3. 叶不节点用指针相连
+      3. 叶节点用指针相连
    2. 优点:
       1. 高度更少, 因为B+树的数据只存在叶子节点, 因此内部节点可以存更多的关键字
       2. 查询速度更加稳定, 次数都等于高度
@@ -66,11 +66,11 @@
 
 7. 为什么mysql用B+树, 而mongodb用B树:
 
-   1. B+树查询效率稳定(等于层数), 而B树最好O(1), 所以在进行单一查询的时候,  B树比较快, mongodb单一查询比较多, 而mysql范围查询比较多
+   1. B+树查询效率稳定(等于层数), 而B树最好O(1), 所以在进行单一查询的时候,  B树比较快, mongodb单一等于查询比较多, 而mysql范围查询比较多
    2. B+树叶子节点相连, 有利于范围查询, 若在一个节点内查找完, 需要跳到下个节点,  可以直接跳, 不用回到上一个节点, 减少一次磁盘IO
    3. B+数遍历比较快(直接扫描叶子节点链表即可), 有利于mysql做全表查询
    4. B+树的数据在叶子节点, 因此在查找时只需要将索引加载进内存, 在查询时内存消耗少, 并且B树每个节点都要保存数据, 导致非叶子节点中的键数量变少, 查询效率低
-   5. B+树的索引文件大小为操作系统页大小的整数倍, 有利于填充内存页, 节省空间, 而B树的节点大小不固定, 所以可能浪费一些内存页空间
+   5. **B+树的索引文件大小为操作系统页大小的整数倍, 有利于填充内存页, 节省空间, 而B树的节点大小不固定, 所以可能浪费一些内存页空间**
 
 8. 为什么不用哈希表做索引:
 
